--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
 		<ul class="nav navbar-nav">
 			<li><a href="/nerds">Local Storage</a></li>
 			<li><a href="/geeks">Directive</a></li>	
-			<li><a ui-sref="home">Home</a></li>
-			<li><a ui-sref="about">About</a></li>
+			<li><a ui-sref="home">Nested Views</a></li>
+			<li><a ui-sref="about">Multiple Views</a></li>
 		</ul>
 	</nav>
 
