--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 	<script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="libs/angular-resource/angular-resource.js"></script>
 	<script src="libs/angular-poller/angular-poller.js"></script>
+	<script src="libs/socket.io-client/dist/socket.io.js"></script>
+	<script src="libs/angular-socket-io/socket.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
@@ -29,8 +31,9 @@
 	<script src="js/directives/star.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
+	
 </head>
-<body ng-app="sampleApp" ng-controller="MainController">
+<body ng-app="sampleApp">
 <div class="container-fluid">
 
 	<!-- HEADER -->
