--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+	<link rel="stylesheet" href="libs/angular-sticky/style.css">
 
 	<!-- JS -->
 	<script src="libs/angular/angular.min.js"></script>
@@ -19,7 +20,7 @@
 	<script src="libs/angular-resource/angular-resource.js"></script>
 	<script src="libs/angular-poller/angular-poller.js"></script>
 	<script src="libs/socket.io-client/dist/socket.io.js"></script>
-	<script src="libs/angular-socket-io/socket.js"></script>
+	<script src="libs/angular-sticky/style.js">
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
@@ -46,8 +47,8 @@
 		<ul class="nav navbar-nav">
 			<li><a href="/nerds">Local Storage</a></li>
 			<li><a href="/geeks">Directive</a></li>	
-			<li><a ui-sref="home">Nested Views</a></li>
-			<li><a ui-sref="about">Multiple Views</a></li>
+			<li><a ui-sref="nested">Nested Views</a></li>
+			<li><a ui-sref="multipleViews">Multiple Views</a></li>
 		</ul>
 	</nav>
 
