fix for scripts

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
-	<link rel="stylesheet" href="libs/angular-sticky/style.css">
 
 	<!-- JS -->
 	<script src="libs/angular/angular.min.js"></script>
@@ -20,7 +19,7 @@
 	<script src="libs/angular-resource/angular-resource.js"></script>
 	<script src="libs/angular-poller/angular-poller.js"></script>
 	<script src="libs/socket.io-client/dist/socket.io.js"></script>
-	<script src="libs/angular-sticky/style.js">
+	<script src="libs/angular-socket-io/socket.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
