--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 	<!-- HEADER -->
 	<nav class="navbar navbar-inverse">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/">Angular</a>
+			<a class="navbar-brand" ui-sref="home">Angular</a>
 		</div>
 
 		<!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
