Added nested game section

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
 			<li><a ui-sref="geeks">Directive</a></li>
 			<li><a ui-sref="nested">Nested Views</a></li>
 			<li><a ui-sref="multipleViews">Multiple Views</a></li>
+			<li><a ui-sref="game">Game</a></li>
 		</ul>
 	</nav>
 	<!-- ANGULAR DYNAMIC CONTENT -->
