Added ng-draggable directive

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 	<script src="libs/angular-poller/angular-poller.js"></script>
 	<script src="libs/socket.io-client/dist/socket.io.js"></script>
 	<script src="libs/angular-socket-io/socket.js"></script>
+	<script src="libs/ng-draggable/dist/js/ng-draggable.min.js"></script>
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
